@@ -1,5 +1,5 @@
 /*
- *  Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
+ *  Copyright (c) 2021, 2023, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -24,7 +24,7 @@
 /*
  * @test
  * @enablePreview
- * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64" | os.arch == "riscv64"
+ * @requires jdk.foreign.linker != "UNSUPPORTED"
  * @run testng/othervm --enable-native-access=ALL-UNNAMED SafeFunctionAccessTest
  */
 
@@ -34,12 +34,10 @@ import java.lang.foreign.FunctionDescriptor;
 import java.lang.foreign.MemorySegment;
 import java.lang.foreign.MemoryLayout;
 
-import java.lang.foreign.SegmentScope;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
 
-import java.lang.foreign.VaList;
 import java.util.stream.Stream;
 
 import org.testng.annotations.*;
@@ -58,7 +56,7 @@ public class SafeFunctionAccessTest extends NativeTestHelper {
     @Test(expectedExceptions = IllegalStateException.class)
     public void testClosedStruct() throws Throwable {
         MemorySegment segment;
-        try (Arena arena = Arena.openConfined()) {
+        try (Arena arena = Arena.ofConfined()) {
             segment = arena.allocate(POINT);
         }
         assertFalse(segment.scope().isAlive());
@@ -76,7 +74,7 @@ public class SafeFunctionAccessTest extends NativeTestHelper {
                 FunctionDescriptor.ofVoid(C_POINTER, C_POINTER, C_POINTER, C_POINTER, C_POINTER, C_POINTER));
         record Allocation(Arena drop, MemorySegment segment) {
             static Allocation of(MemoryLayout layout) {
-                Arena arena = Arena.openShared();
+                Arena arena = Arena.ofShared();
                 return new Allocation(arena, arena.allocate(layout));
             }
         }
@@ -113,25 +111,11 @@ public class SafeFunctionAccessTest extends NativeTestHelper {
     }
 
     @Test(expectedExceptions = IllegalStateException.class)
-    public void testClosedVaList() throws Throwable {
-        VaList list;
-        try (Arena arena = Arena.openConfined()) {
-            list = VaList.make(b -> b.addVarg(C_INT, 42), arena.scope());
-        }
-        assertFalse(list.segment().scope().isAlive());
-        MethodHandle handle = Linker.nativeLinker().downcallHandle(
-                findNativeOrThrow("addr_func"),
-                FunctionDescriptor.ofVoid(C_POINTER));
-
-        handle.invokeExact(list.segment());
-    }
-
-    @Test(expectedExceptions = IllegalStateException.class)
     public void testClosedUpcall() throws Throwable {
         MemorySegment upcall;
-        try (Arena arena = Arena.openConfined()) {
+        try (Arena arena = Arena.ofConfined()) {
             MethodHandle dummy = MethodHandles.lookup().findStatic(SafeFunctionAccessTest.class, "dummy", MethodType.methodType(void.class));
-            upcall = Linker.nativeLinker().upcallStub(dummy, FunctionDescriptor.ofVoid(), arena.scope());
+            upcall = Linker.nativeLinker().upcallStub(dummy, FunctionDescriptor.ofVoid(), arena);
         }
         assertFalse(upcall.scope().isAlive());
         MethodHandle handle = Linker.nativeLinker().downcallHandle(
@@ -144,24 +128,12 @@ public class SafeFunctionAccessTest extends NativeTestHelper {
     static void dummy() { }
 
     @Test
-    public void testClosedVaListCallback() throws Throwable {
-        MethodHandle handle = Linker.nativeLinker().downcallHandle(
-                findNativeOrThrow("addr_func_cb"),
-                FunctionDescriptor.ofVoid(C_POINTER, C_POINTER));
-
-        try (Arena arena = Arena.openConfined()) {
-            VaList list = VaList.make(b -> b.addVarg(C_INT, 42), arena.scope());
-            handle.invokeExact(list.segment(), sessionChecker(arena));
-        }
-    }
-
-    @Test
     public void testClosedStructCallback() throws Throwable {
         MethodHandle handle = Linker.nativeLinker().downcallHandle(
                 findNativeOrThrow("addr_func_cb"),
                 FunctionDescriptor.ofVoid(C_POINTER, C_POINTER));
 
-        try (Arena arena = Arena.openConfined()) {
+        try (Arena arena = Arena.ofConfined()) {
             MemorySegment segment = arena.allocate(POINT);
             handle.invokeExact(segment, sessionChecker(arena));
         }
@@ -173,9 +145,9 @@ public class SafeFunctionAccessTest extends NativeTestHelper {
                 findNativeOrThrow("addr_func_cb"),
                 FunctionDescriptor.ofVoid(C_POINTER, C_POINTER));
 
-        try (Arena arena = Arena.openConfined()) {
+        try (Arena arena = Arena.ofConfined()) {
             MethodHandle dummy = MethodHandles.lookup().findStatic(SafeFunctionAccessTest.class, "dummy", MethodType.methodType(void.class));
-            MemorySegment upcall = Linker.nativeLinker().upcallStub(dummy, FunctionDescriptor.ofVoid(), arena.scope());
+            MemorySegment upcall = Linker.nativeLinker().upcallStub(dummy, FunctionDescriptor.ofVoid(), arena);
             handle.invokeExact(upcall, sessionChecker(arena));
         }
     }
@@ -185,7 +157,7 @@ public class SafeFunctionAccessTest extends NativeTestHelper {
             MethodHandle handle = MethodHandles.lookup().findStatic(SafeFunctionAccessTest.class, "checkSession",
                     MethodType.methodType(void.class, Arena.class));
             handle = handle.bindTo(arena);
-            return Linker.nativeLinker().upcallStub(handle, FunctionDescriptor.ofVoid(), SegmentScope.auto());
+            return Linker.nativeLinker().upcallStub(handle, FunctionDescriptor.ofVoid(), Arena.ofAuto());
         } catch (Throwable ex) {
             throw new AssertionError(ex);
         }
